tests/ui/higher-ranked/trait-bounds/normalize-under-binder/norm-before-method-resolution-opaque-type.old.stderr
error[E0507]: cannot move out of `*x` which is behind a shared reference
  --> $DIR/norm-before-method-resolution-opaque-type.rs:22:13
   |
LL |     let x = *x;
   |             ^^ move occurs because `*x` has type `<X as Trait<'_>>::Out<Foo>`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *x;
LL +     let x = x;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
